<resources>
    <string name="app_name">WeightControlApp</string>

    <!-- common_string -->
    <string name="common_weight_unit">kg</string>

    <!-- content for menu -->
    <string name="action_top">top</string>
    <string name="action_my_page">mypage</string>
    <string name="action_record">record</string>
    <string name="action_history">history</string>

    <!-- Strings used for fragments for navigation -->
    <string name="weight_record_fragment_label">Weight Record Fragment</string>
    <string name="check_weight_record_fragment_label">Check Weight Record Fragment</string>
    <string name="back_to_weight_record_screen">Back to weight record screen</string>
    <string name="history_fragment_label">History Fragment</string>
    <string name="history_graph_fragment_label">History Graph Fragment</string>
    <string name="mypage_fragment_label">MyPage Fragment</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>

    <!-- Strings for WeightRecordFragment -->
    <string name="record_your_weight">Let\'s record \n today\'s your weight!</string>
    <string name="record_your_weight_in_edit_text">Record your weight</string>
    <string name="weight_record">Record</string>

    <!-- String for CheckWeightRecordFragment -->
    <string name="record_weight_message">Today\'s your weight is \n %1$s kg!</string>

    <!-- String for MyPageFragment -->
    <string name="mypage_sample_description">This fragment is MyPage!</string>

    <!-- HistoryFragment -->
    <string name="history_fragment_title">History</string>

    <!--HistoryGraphFragment -->
    <string name="history_graph_sample_description">This fragment is HistoryGraph!</string>
</resources>
