<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.weightcontrolapp.MainActivity">
    <item
        android:id="@+id/action_top"
        android:orderInCategory="100"
        android:title="@string/action_top"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_page"
        android:orderInCategory="100"
        android:title="@string/action_my_page"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/action_record"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="100"
        android:title="@string/action_history"
        app:showAsAction="never" />
</menu>