<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WeightRecordFragment">

    <fragment
        android:id="@+id/WeightRecordFragment"
        android:name="com.example.weightcontrolapp.ui.weightrecord.WeightRecordFragment"
        android:label="@string/weight_record_fragment_label"
        tools:layout="@layout/weight_record_fragment">

        <action
            android:id="@+id/action_WeightRecordFragment_to_CheckWeightRecordFragment"
            app:destination="@id/CheckWeightRecordFragment" />
        <action
            android:id="@+id/action_WeightRecordFragment_to_HistoryFragment"
            app:destination="@id/HistoryFragment"
            />
    </fragment>

    <fragment
        android:id="@+id/CheckWeightRecordFragment"
        android:name="com.example.weightcontrolapp.ui.weightrecord.CheckWeightRecordFragment"
        android:label="@string/check_weight_record_fragment_label"
        tools:layout="@layout/check_weight_record_fragment">

        <action
            android:id="@+id/action_CheckWeightRecordFragment_to_WeightRecordFragment"
            app:destination="@id/WeightRecordFragment" />
    </fragment>

    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.example.weightcontrolapp.ui.history.HistoryFragment"
        android:label="@string/history_fragment_label">

    </fragment>
</navigation>