<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="weightRecordViewModel"
            type="com.example.weightcontrolapp.ui.weightrecord.WeightRecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_record_your_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/record_your_weight"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/weight_record_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/weight_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="50dp"
            android:ems="200"
            android:hint="@string/record_your_weight_in_edit_text"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@id/weight_record_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_record_your_weight" />

        <TextView
            android:id="@+id/weight_unit"
            android:layout_width="53dp"
            android:layout_height="51dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="60dp"
            android:text="@string/common_weight_unit"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/weight_record_button"
            app:layout_constraintStart_toEndOf="@id/weight_text_input" />

        <Button
            android:id="@+id/weight_record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_record"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_record_your_weight" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
